--- a/_posts/BlockChain/블록체인_특강/2022-07-22-5일차-(ERC721)스마트컨트랙트 NFT 발행, 전송.md
+++ b/_posts/BlockChain/블록체인_특강/2022-07-22-5일차-(ERC721)스마트컨트랙트 NFT 발행, 전송.md
@@ -21,7 +21,7 @@ typora-root-url: ../../..
 
 * **만약 변경 안될시? 그림처럼 연결시도**
 
-<img src="images\2022-07-22-5일차-스마트컨트랙트 NFT 발행 및 전송\image-20220722173226084.png" alt="image-20220722173226084" style="zoom:50%;" />
+<img src="/images\2022-07-22-5일차-스마트컨트랙트 NFT 발행 및 전송\image-20220722173226084.png" alt="image-20220722173226084" style="zoom:50%;" />
 
 **햇갈리는 용어**
 
@@ -45,16 +45,16 @@ typora-root-url: ../../..
 
 * `1번째 방법`은 하나의 서버가 있고 관련 데이터인 토큰들이 서버에 관련시킨것
 
-![image-20220722101605415](images\2022-07-22-5일차-스마트컨트랙트 NFT 발행\image-20220722101605415.png)
+![image-20220722101605415](/images\2022-07-22-5일차-스마트컨트랙트 NFT 발행\image-20220722101605415.png)
 
 
 
 * `2번재 방법`은 스마트 컨트랙트 소유자가 따로, 디지털 작품 생산자가 따로 있다.   
   토큰 하나에 관련 토큰들이 연결되어 있다.
 
-![image-20220722102002760](images\2022-07-22-5일차-스마트컨트랙트 NFT 발행\image-20220722102002760.png)
+![image-20220722102002760](/images\2022-07-22-5일차-스마트컨트랙트 NFT 발행\image-20220722102002760.png)
 
-![image-20220722102031541](images\2022-07-22-5일차-스마트컨트랙트 NFT 발행\image-20220722102031541.png)
+![image-20220722102031541](/images\2022-07-22-5일차-스마트컨트랙트 NFT 발행\image-20220722102031541.png)
 
 그림의 `Data URL`이 Opensea에서 볼 수 있는 사진처럼 해당 `사진 URL`을 적어서 배포하는게 보통의 `NFT`이다.
 
@@ -160,7 +160,7 @@ contract Contract721 {
 
 **Remix에서 테스트를 위해 DEPLOY**
 
-<img src="images\2022-07-22-5일차-스마트컨트랙트 NFT 발행 및 전송\image-20220722153252482.png" alt="image-20220722153252482" style="zoom:50%;" />
+<img src="/images\2022-07-22-5일차-스마트컨트랙트 NFT 발행 및 전송\image-20220722153252482.png" alt="image-20220722153252482" style="zoom:50%;" />
 
 
 
@@ -172,13 +172,13 @@ contract Contract721 {
 
 **Ganache에서 테스트한 Public Key**
 
-![image-20220722152159277](images\2022-07-22-5일차-스마트컨트랙트 NFT 발행 및 전송\image-20220722152159277.png)
+![image-20220722152159277](/images\2022-07-22-5일차-스마트컨트랙트 NFT 발행 및 전송\image-20220722152159277.png)
 
 
 
 **BLOCKS 탭에서 BLOCK 트랜잭션이 잘 시행되었는지, GAS 얼마, 언제 사용했는지 정보 확인**
 
-![image-20220722152626537](images\2022-07-22-5일차-스마트컨트랙트 NFT 발행 및 전송\image-20220722152626537.png)
+![image-20220722152626537](/images\2022-07-22-5일차-스마트컨트랙트 NFT 발행 및 전송\image-20220722152626537.png)
 
 
 
@@ -187,13 +187,13 @@ contract Contract721 {
 * `FROM ADDRESS`가 어디로부터 보냈는지 나타낸 주소(위의 **PUBLIC KEY**)
 * `CREATED CONTRACT ADDRESS`가 핵심인데, **스마트 컨트랙트 배포**통해 생성되는 **그 주소**이다.  
 
-![image-20220722152840212](images\2022-07-22-5일차-스마트컨트랙트 NFT 발행 및 전송\image-20220722152840212.png)
+![image-20220722152840212](/images\2022-07-22-5일차-스마트컨트랙트 NFT 발행 및 전송\image-20220722152840212.png)
 
 
 
 **Remix에서 Deploy할때 컨트랙트 주소 생성되는데 바로 이것과 동일(사진 참고)**
 
-![image-20220722153041659](images\2022-07-22-5일차-스마트컨트랙트 NFT 발행 및 전송\image-20220722153041659.png)
+![image-20220722153041659](/images\2022-07-22-5일차-스마트컨트랙트 NFT 발행 및 전송\image-20220722153041659.png)
 
 
 
@@ -202,7 +202,7 @@ contract Contract721 {
 * Metamask에선 네트워크는 Ganache로 설정(설명 생략)
 * 계정은 가져오기를 통해 Private Key(Ganache에 있는)를 사용
 
-<img src="images\2022-07-22-5일차-스마트컨트랙트 NFT 발행 및 전송\image-20220722153546522.png" alt="image-20220722153546522" style="zoom:50%;" />
+<img src="/images\2022-07-22-5일차-스마트컨트랙트 NFT 발행 및 전송\image-20220722153546522.png" alt="image-20220722153546522" style="zoom:50%;" />
 
 
 
@@ -212,13 +212,13 @@ contract Contract721 {
   TokenId를 적으라고 하셔서 이번엔 TokenId로 계속 적겠음  
   (별루 상관은 없는것 같긴하다)
 
-<img src="images\2022-07-22-5일차-스마트컨트랙트 NFT 발행 및 전송\image-20220722153759087.png" alt="image-20220722153759087" style="zoom:50%;" />
+<img src="/images\2022-07-22-5일차-스마트컨트랙트 NFT 발행 및 전송\image-20220722153759087.png" alt="image-20220722153759087" style="zoom:50%;" />
 
 
 
 **이렇게 가져왔으면 성공!**
 
-<img src="images\2022-07-22-5일차-스마트컨트랙트 NFT 발행 및 전송\image-20220722154017737.png" alt="image-20220722154017737" style="zoom:50%;" />
+<img src="/images\2022-07-22-5일차-스마트컨트랙트 NFT 발행 및 전송\image-20220722154017737.png" alt="image-20220722154017737" style="zoom:50%;" />
 
 
 
@@ -237,7 +237,7 @@ contract Contract721 {
 
 **실행사진**
 
-![image-20220722154545314](images\2022-07-22-5일차-스마트컨트랙트 NFT 발행 및 전송\image-20220722154545314.png)
+![image-20220722154545314](/images\2022-07-22-5일차-스마트컨트랙트 NFT 발행 및 전송\image-20220722154545314.png)
 
 
 
@@ -249,9 +249,9 @@ contract Contract721 {
     getMetaData함수 사용(사진)
   * Metamask의 변화도 보여줌(사진)
 
-![image-20220722160517688](images\2022-07-22-5일차-스마트컨트랙트 NFT 발행 및 전송\image-20220722160517688.png)
+![image-20220722160517688](/images\2022-07-22-5일차-스마트컨트랙트 NFT 발행 및 전송\image-20220722160517688.png)
 
-![image-20220722160627426](images\2022-07-22-5일차-스마트컨트랙트 NFT 발행 및 전송\image-20220722160627426.png)
+![image-20220722160627426](/images\2022-07-22-5일차-스마트컨트랙트 NFT 발행 및 전송\image-20220722160627426.png)
 
 
 
@@ -262,21 +262,21 @@ contract Contract721 {
   * to : 원하는 사용자의 계정
   * tokenId : 원하는 토큰사용(현재 토큰 1, 2로 두개 있음)
 
-![image-20220722161201129](images\2022-07-22-5일차-스마트컨트랙트 NFT 발행 및 전송\image-20220722161201129.png)
+![image-20220722161201129](/images\2022-07-22-5일차-스마트컨트랙트 NFT 발행 및 전송\image-20220722161201129.png)
 
 
 
 **to에 적었던 계정에 토큰 가져오기**
 
-<img src="images\2022-07-22-5일차-스마트컨트랙트 NFT 발행 및 전송\image-20220722161243894.png" alt="image-20220722161243894" style="zoom:50%;" />
+<img src="/images\2022-07-22-5일차-스마트컨트랙트 NFT 발행 및 전송\image-20220722161243894.png" alt="image-20220722161243894" style="zoom:50%;" />
 
-<img src="images\2022-07-22-5일차-스마트컨트랙트 NFT 발행 및 전송\image-20220722161345905.png" alt="image-20220722161345905" style="zoom:50%;" />
+<img src="/images\2022-07-22-5일차-스마트컨트랙트 NFT 발행 및 전송\image-20220722161345905.png" alt="image-20220722161345905" style="zoom:50%;" />
 
 
 
 **토큰의 주인도 잘 바뀐점을 알 수 있다**
 
-![image-20220722161442216](images\2022-07-22-5일차-스마트컨트랙트 NFT 발행 및 전송\image-20220722161442216.png)
+![image-20220722161442216](/images\2022-07-22-5일차-스마트컨트랙트 NFT 발행 및 전송\image-20220722161442216.png)
 
 <br>
 
@@ -293,7 +293,7 @@ contract Contract721 {
   => Remix로 가져오기
 * 경로 수정 반드시 잘 해줘야한다(import)
 
-![image-20220722105150985](images\2022-07-22-5일차-스마트컨트랙트 NFT 발행\image-20220722105150985.png)
+![image-20220722105150985](/images\2022-07-22-5일차-스마트컨트랙트 NFT 발행\image-20220722105150985.png)
 
 
 
@@ -306,7 +306,7 @@ contract Contract721 {
 
 **Deploy는 Account1 계정, 테스트넷 네트워크를 사용중이다. 메타마스크와 연동해서 transact**
 
-<img src="images\2022-07-22-5일차-스마트컨트랙트 NFT 발행 및 전송\image-20220722131144237.png" alt="image-20220722131144237" style="zoom:70%;" />
+<img src="/images\2022-07-22-5일차-스마트컨트랙트 NFT 발행 및 전송\image-20220722131144237.png" alt="image-20220722131144237" style="zoom:70%;" />
 
 
 
@@ -317,7 +317,7 @@ contract Contract721 {
 * 즉, 스마트컨트랙트 생성 및 토큰 발행자는 서버의 역할을 한다고 생각한다.
 * 추가로 JW토큰을 하나더 생성 해봤는데 마찬가지였고, 이런 방식으로 NFT 토큰을 주고받는다
 
-<img src="images\2022-07-22-5일차-스마트컨트랙트 NFT 발행 및 전송\image-20220722165604552.png" alt="image-20220722165604552" style="zoom:50%;" />
+<img src="/images\2022-07-22-5일차-스마트컨트랙트 NFT 발행 및 전송\image-20220722165604552.png" alt="image-20220722165604552" style="zoom:50%;" />
 
 
 
@@ -325,19 +325,19 @@ contract Contract721 {
 
 아래처럼 성공한걸 볼 수 있고(**etherscan페이지**),
 
-![image-20220722132342383](images\2022-07-22-5일차-스마트컨트랙트 NFT 발행\image-20220722132342383.png)
+![image-20220722132342383](/images\2022-07-22-5일차-스마트컨트랙트 NFT 발행\image-20220722132342383.png)
 
 
 
 **메타마스크에서도 Account2 계정보면 토큰 가져와보면 잘 얻는것을 알 수 있다.**
 
-<img src="images\2022-07-22-5일차-스마트컨트랙트 NFT 발행 및 전송\image-20220722165836619.png" alt="image-20220722165836619" style="zoom:50%;" />
+<img src="/images\2022-07-22-5일차-스마트컨트랙트 NFT 발행 및 전송\image-20220722165836619.png" alt="image-20220722165836619" style="zoom:50%;" />
 
 
 
 **토큰의 주인도 Account2 계정이라고 잘 나타난다.**
 
-![image-20220722165918504](images\2022-07-22-5일차-스마트컨트랙트 NFT 발행 및 전송\image-20220722165918504.png)
+![image-20220722165918504](/images\2022-07-22-5일차-스마트컨트랙트 NFT 발행 및 전송\image-20220722165918504.png)
 
 
 
@@ -387,9 +387,9 @@ from, to 에 주소 넣고, tokenId를 파는이가 가지고있는 토큰 Id로
 * DEPLOY 토큰은 JW_NFT 이름으로 지정
 * 보낼 URI데이터는 그냥 test로 지정
 
-<img src="images\2022-07-22-5일차-스마트컨트랙트 NFT 발행 및 전송\image-20220722173319072.png" alt="image-20220722173319072" style="zoom:80%;" />
+<img src="/images\2022-07-22-5일차-스마트컨트랙트 NFT 발행 및 전송\image-20220722173319072.png" alt="image-20220722173319072" style="zoom:80%;" />
 
-<img src="images\2022-07-22-5일차-스마트컨트랙트 NFT 발행 및 전송\image-20220722173722721.png" alt="image-20220722173722721" style="zoom:80%;" />
+<img src="/images\2022-07-22-5일차-스마트컨트랙트 NFT 발행 및 전송\image-20220722173722721.png" alt="image-20220722173722721" style="zoom:80%;" />
 
 
 
@@ -397,31 +397,31 @@ from, to 에 주소 넣고, tokenId를 파는이가 가지고있는 토큰 Id로
 
 * 토큰 십진수는 자리수 입력이지만 여기선 토큰ID로 입력하겠다.
 
-<img src="images\2022-07-22-5일차-스마트컨트랙트 NFT 발행 및 전송\image-20220722173751381.png" alt="image-20220722173751381" style="zoom:80%;" />
+<img src="/images\2022-07-22-5일차-스마트컨트랙트 NFT 발행 및 전송\image-20220722173751381.png" alt="image-20220722173751381" style="zoom:80%;" />
 
-<img src="images\2022-07-22-5일차-스마트컨트랙트 NFT 발행 및 전송\image-20220722173828183.png" alt="image-20220722173828183" style="zoom:50%;" />
+<img src="/images\2022-07-22-5일차-스마트컨트랙트 NFT 발행 및 전송\image-20220722173828183.png" alt="image-20220722173828183" style="zoom:50%;" />
 
 
 
-<img src="images\2022-07-22-5일차-스마트컨트랙트 NFT 발행 및 전송\image-20220722174005745.png" alt="image-20220722174005745" style="zoom:80%;" />
+<img src="/images\2022-07-22-5일차-스마트컨트랙트 NFT 발행 및 전송\image-20220722174005745.png" alt="image-20220722174005745" style="zoom:80%;" />
 
 
 
 **해당 토큰을 Account5 계정에 주기위해 mint 한다.**
 
-<img src="images\2022-07-22-5일차-스마트컨트랙트 NFT 발행 및 전송\image-20220722174052699.png" alt="image-20220722174052699" style="zoom:80%;" />
+<img src="/images\2022-07-22-5일차-스마트컨트랙트 NFT 발행 및 전송\image-20220722174052699.png" alt="image-20220722174052699" style="zoom:80%;" />
 
 
 
 **토큰 가져와 보면 얻은것을 알 수 있다.**
 
-<img src="images\2022-07-22-5일차-스마트컨트랙트 NFT 발행 및 전송\image-20220722174123871.png" alt="image-20220722174123871" style="zoom:80%;" />
+<img src="/images\2022-07-22-5일차-스마트컨트랙트 NFT 발행 및 전송\image-20220722174123871.png" alt="image-20220722174123871" style="zoom:80%;" />
 
 
 
 **해당 토큰의 주인이 Address5 라는점을 알 수 있다.**
 
-![image-20220722174149365](images\2022-07-22-5일차-스마트컨트랙트 NFT 발행 및 전송\image-20220722174149365.png)
+![image-20220722174149365](/images\2022-07-22-5일차-스마트컨트랙트 NFT 발행 및 전송\image-20220722174149365.png)
 
 
 
@@ -446,7 +446,7 @@ from, to 에 주소 넣고, tokenId를 파는이가 가지고있는 토큰 Id로
 
 ## 마무리
 
-![image-20220722145357849](images\2022-07-22-5일차-스마트컨트랙트 NFT 발행 및 전송\image-20220722145357849.png)
+![image-20220722145357849](/images\2022-07-22-5일차-스마트컨트랙트 NFT 발행 및 전송\image-20220722145357849.png)
 
 블록체인 분야 - 네트워크 전문가, 암호학 전문가, 소프트웨어 전문가  
 따라서 관심이 있다면 이중에 하나를 파고드는게 좋치, 이 모든걸 하는 전문가는 없다고 봐도 된다.  
