--- a/_posts/Style_Sheet/CSS/2022-08-01-다양한 UI 스타일링.md
+++ b/_posts/Style_Sheet/CSS/2022-08-01-다양한 UI 스타일링.md
@@ -51,7 +51,8 @@ typora-root-url: ../../..
 * **Container(제일 부모)**가 `overflow: hidden`을 통해서 가로로 많은 사진 데이터들이 이어져 있는것을 숨긴다.
 * **Arrow(화살표)**가 `position: absolute`를 통해 절대적 구조를 가져서 위치를 어디든 겹쳐서 이동이 가능하다.(그림위에 화살표가 있을 수 있는 이유이다) 참고로 부모는 `position: relative` 해야한다.
   * 화살표 선택시 `cursor: pointer`를 통해 마우스 포인터의 모양을 바꿀 수 있다.
-  * 중요 !! `z-index: 2`를 통해서 우선 순번 index를 지정해야 화살표가 그림과 겹쳐도 앞으로 나타난다.
+  * 중요 !! `z-index: 2`를 통해서 우선 순번 index를 지정해야 화살표가 그림과 겹쳐도 앞으로 나타난다.  
+    만약 무조건 제일 상위에 나타내고 싶은게 있다면 간단히 `z-index: 999`로 하면 되겠죠
   * `left: ${props=>{return props.direction === "left" ? "10px" : null}};`  
     **왼쪽 화살표의 위치배치** 예시로 `direction`은 왼쪽 화살표의 이름으로 `left`를 의미하며 삼항 연산을 통해 배치시켰다. 왜냐하면 그냥은 왼쪽, 오른쪽 화살표 위치로 이동이 힘들기 때문이다.
 * **Wrapper**(그림들 담은 큰틀)은 **Container**의 바로 자식이다.  
@@ -136,7 +137,7 @@ typora-root-url: ../../..
 
 <br>
 
-## Login
+## Login - background 스타일링
 
 로그인이지만, 배경만 볼것이다.  
 배경을 스타일링 한것을 잘 확인할 것
@@ -172,7 +173,7 @@ const Container = styled.div`
 
 <br>
 
-## Cart
+## Cart - H1태그 꾸미기
 
 H1 선을 꾸민것이다.
 
@@ -189,6 +190,8 @@ H1 선을 꾸민것이다.
 ## Mobile - responsive.js
 
 모바일에서 웹을 보면 당연히 배치나 크기 등이 다를것이다. 이를 해결하는 방안이다.
+
+코드확인 : [responsive.jsx](https://github.com/BH946/fullstack-clone/blob/shop-cart-ui/src/responsive.js)
 
 * css를 아래처럼 사용하려면 import가 꼭 필요하다.
 * Iphone X를 기준으로 하였고, 간단한 예시만 보이겠다.
@@ -233,3 +236,193 @@ const Container = styled.div`
   * `flexDirection:"column"` 을 의미
 
 <br>
+
+## Navbar - 2
+
+상단 메뉴바인데, 이것을 스크롤해도 맨위 상단에 고정 시키는것과  
+오른쪽의 아이콘들을 직접 커스텀한것을 중점으로 확인
+
+코드확인 : [topbar.css](https://github.com/BH946/fullstack-clone/blob/shop-cart-admin/src/components/topbar/topbar.css)
+
+* **.topbar**(제일 부모) 를 제일 상단에 고정시키면 되는데,  
+  `position: sticky; top:0; z-index: 999;` 속성을 설정하면 된다.
+* **.topbarWrapper**(topbar의 바로 하위자식) 은 **.topLeft**, **.topRight**를 위해  
+  `display: flex; justify-content: space-between;` 설정을 해준다.
+* **.topbarIconContainer**(.topRight의 바로 하위자식) 은 **.topIconBadge** 와 겹치기위해  
+  `position: relative;` 로 절대적 구조를 위한 기반을 다진다.
+* **.topIconBadge** 에서 `position: absolute;` 를 통해 겹쳐서 표현한다.  
+  `border-radius: 50%;` 를 통해 동그라미로 만들고 나머지도 스타일링 한다.
+
+
+
+![image-20220802162039591](/images/2022-08-01-다양한 UI 스타일링/image-20220802162039591.png)
+
+<br>
+
+## Sidbar
+
+그림처럼 왼쪽의 모습이며, 해당 위치로 이동과 해당 위치에서 고정 시키는 방법  
+마우스 올렸을시 변화되는 UI를 중점으로 확인한다  
+마지막으로 box-shadow를 활용한 그림자 커스텀한것을 확인한다
+
+코드확인 : [Sidbar.css](https://github.com/BH946/fullstack-clone/blob/shop-cart-admin/src/components/sidebar/sidebar.css)
+
+* 우선 위치 이동한 방식을 설명하자면,  
+  **App.js**에서 **Topbar**(상단의 메뉴바) 추가한 다음에 `<div id=container/>` 하나 추가해주고  
+  **App.css**에서 container를 `display:flex` 를 했기 때문에 container 하위 자식으로  
+  **Sidbar**(현재 다룰 왼쪽 그림의 바)와 오른쪽 다양한 **페이지들** 형태로 나타낼 수 있는것이다.  
+  실제로 아래에선 왼쪽 **Sidbar**는 `flex:1`, 오른쪽 **Home**은 `flex:4` 로 1:4로 분배했다.
+  
+* **.sidebar**(제일 부모) 는 그림의 왼쪽에 위치하기위해 높이를 `height: calc(100vh - 50px)`로 설정  
+  그리고 `position: sticky; top: 50px;`  을 통해 높이 50px 아래에 위치시켜 고정시킨다  
+
+  * `height` 설정을 추가 설명하자면 ,  
+    **Topbar**(상단의 메뉴바) 가 height가 50px이기 때문에 이렇게 설정하는 것이다.  
+    100vh는 100%로 볼 수 있으며 **Topbar** 높이만큼은 빼줘야 **.sidebar** 가 이쁘게 설정 된다.
+
+* **.sidebarIcon** 는 mui-icon을 담은 컴포넌트인데 `font-size`로 크기변경 한다.
+
+  * 잘 안먹히는 경우 `!important` 속성을 추가하라. (하지만 이를 남발하면 좋지않으니 조심히 사용)
+
+* **.sidebarListItem** 는 active와 hover(마우스 올렸을때 이벤트) 일때 UI를 변경시킨다.
+
+    * ```css
+      .sidebarListItem.active,
+      .sidebarListItem:hover {
+        background-color: rgb(240, 240, 255);
+      }
+      ```
+
+    * 참고로 active는 `<li className="sidebarListItem active">` 이런식의 태그에 반응한다.
+
+* **featuredInfo.css의 .featuredItem** 는 그림 오른쪽의 **Home.jsx** 페이지 부분인데,  
+    UI들이 그림자로 꾸며진것을 볼 수 있다. [box-shadow](https://html-css-js.com/css/generator/box-shadow/)를 커스텀하는 페이지를 이용한것이다.
+
+    * ```css
+      -webkit-box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
+      box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
+      ```
+
+
+
+<img src="/images/2022-08-01-다양한 UI 스타일링/image-20220802163609738.png" alt="image-20220802163609738" style="zoom: 80%;" />
+
+<br>
+
+## Recharts
+
+차트를 활용한 것이다. [사이트](https://recharts.org/en-US/guide/installation)에서 import를 해서 사용한다.  
+다양한 커스텀 방법은 꼭 사이트 참고
+
+코드확인 : [Chart.jsx](https://github.com/BH946/fullstack-clone/blob/shop-cart-admin/src/components/chart/Chart.jsx)
+
+* **ResponseiveContainer** 이 반응형 컨테이너. 즉, `width="100%" aspect={4 / 1}` 로 하면  
+  높이는 너비의 1/4크기로 나온다.
+* **LineChart** 는 실제 차트 데이터를 넣는 부분(더미 데이터를 활용함 [dummyData.js](https://github.com/BH946/fullstack-clone/blob/shop-cart-admin/src/dummyData.js))
+* **XAxis, YAxis** 는 x축, y축이며 색은 `stroke`으로 설정
+* **Line** 은 데이터에 따른 그래프 선을 설정
+- **Tooltip** 은 해당 데이터에 마우스 가져다대면 y축인 값을 보여줌
+* **CartesianGrid** 를 통해 grid나타냄(모눈종이같이)   
+  그리고 `strokeDasharray 5 5`(선길이, 선사이공백길이)를통해 실선이 아닌 점선처럼 보여줌
+
+
+
+![image-20220802170910653](/images/2022-08-01-다양한 UI 스타일링/image-20220802170910653.png)
+
+<br>
+
+## WidgetLG
+
+페이지에 구성된 위젯의 Table태그 활용과 버튼 스타일링 정리
+
+코드확인 : [widgetLg.css](https://github.com/BH946/fullstack-clone/blob/shop-cart-admin/src/components/widgetLg/widgetLg.css)
+
+* **.widgetLgTable** 은 table태그이며, table선은 간단히 `border:none` 을 통해 없앨수 있다.
+
+  * `border-spacing: 20px` 을 통해 내부 td, th값들도 margin효과를 얻음  
+    테이블 선 기준으로 margin 하는 느낌이라고 이해하면 된다.
+
+* **.widgetLgButton** 은 버튼이며 **Approved, Declined, Pending** 마다 배경색, 글자색을 다르게 표현
+
+  * ```jsx
+    // jsx
+    const Button = ({ type }) => {
+        return <button className={"widgetLgButton " + type}>{type}</button>;
+    };
+    
+    <Button type="Declined" />
+    
+    // css
+    .widgetLgButton.Approved{
+        background-color: #e5faf2;
+        color: #3bb077;
+    }
+    .widgetLgButton.Declined{
+        background-color: #fff0f1;
+        color: #d95087;
+    }
+    .widgetLgButton.Pending{
+        background-color: #ebf1fe;
+        color: #2a7ade;
+    }
+    ```
+
+  * 이런식으로 간단히 사용할 수 있다. (위에서 정리한 **Sidbar**의 active였을때를 활용한 예시이다)
+
+
+
+<img src="/images/2022-08-01-다양한 UI 스타일링/image-20220802175012485.png" alt="image-20220802175012485" style="zoom:80%;" />
+
+<br>
+
+## UserList
+
+mui 사이트에서 table(data table)관련 라이브러리를 활용한것이다.
+
+코드확인 : [UserList.jsx](https://github.com/BH946/fullstack-clone/blob/shop-cart-admin/src/pages/userList/UserList.jsx)
+
+* **DataGrid** 가 테이블 구성하는 컴포넌트이다.
+  * `rows`속성에 데이터를 넣어준다([dummyData.js](https://github.com/BH946/fullstack-clone/blob/shop-cart-admin/src/dummyData.js) 활용) 
+  * `disableSelectionOnClick` 속성 넣어주면 요소 선택시 체크박스X  
+    `checkboxSelection` 속성 넣어주면 체크박스는 체크 가능하다
+  * `columns` 속성에 테이블의 열 속성을 설정한다  
+    여기서 중요한것은 `renderCell` 이며, 테이블의 해당 셀(열)부분 커스텀해서 재렌더 한다  
+    즉, 각 셀들 커스텀이 가능한것이다. 나머지는 코드를 확인할 것
+  * `pageSize` 속성은 화면에 보이는 한 페이지에 몇개 데이터를(행) 보여줄건지 설정
+
+
+
+![image-20220802181353778](/images/2022-08-01-다양한 UI 스타일링/image-20220802181353778.png)
+
+<br>
+
+## User
+
+원래 input 태그에서 file 타입을 사용하면, 파일을 입력받을수 있는 버튼 역할을 하는데 이를 활용해서  
+그림의 오른쪽처럼 이미지 업로드를 mui-icon으로 커스텀해서 입력 받는 방법을 볼것이다
+
+코드확인 : [User.jsx](https://github.com/BH946/fullstack-clone/blob/shop-cart-admin/src/pages/user/User.jsx)
+
+* ```jsx
+  <label htmlFor="file">
+      <PublishIcon className="userUpdateIcon" />
+  </label>
+  <input type="file" id="file" style={{ display: "none" }} />
+  ```
+
+* 이처럼 label의 속성을 **id가 file인것과 연결**하고, mui-icon인 PublishIcon으로 커스텀한다.  
+  그리고 나서 타입이 file인 input태그와 연결을 위해 **id를 file**로 설정한다.  
+  마지막으로 해당 버튼을 display:"none" 속성을 줘서 사라지게 한다.
+
+
+
+![image-20220802182737086](/images/2022-08-01-다양한 UI 스타일링/image-20220802182737086.png)
+
+<br>
+
+
+
+
+
+
+
