--- a/_posts/Style_Sheet/CSS/2022-08-01-다양한 UI 스타일링.md
+++ b/_posts/Style_Sheet/CSS/2022-08-01-다양한 UI 스타일링.md
@@ -18,7 +18,7 @@ typora-root-url: ../../..
 간단한 개인 프로젝트에는 `CSS 프레임워크, codepen 사이트` 등을 이용하는 것을 추천
 
 * 이전의 React스타일링도 참고 추천 - [React스타일링](/react_js/React로-스타일링(@emotion,SCSS,SASS))
-* 참고로 [bootstrap](http://bootstrapk.com/), [tailwind](https://tailwindcss.com/) 라는 유용한 CSS 프레임워크가 있으므로 참고!
+* 참고로 [bootstrap](https://getbootstrap.com/), [tailwind](https://tailwindcss.com/) 라는 유용한 CSS 프레임워크가 있으므로 참고!
   * bootstrap은 반응형에 좋으며, tailwind는 가벼워서 좋다.
 * 또한 [codepen](https://codepen.io/) 라는 다른사람들이 UI 스타일링한 CSS 코드를 공유한 사이트도 유용하다.
 
