--- a/_posts/Python/Machine_Learning(머신러닝)/2022-08-20-00. Intro.md
+++ b/_posts/Python/Machine_Learning(머신러닝)/2022-08-20-00. Intro.md
@@ -8,7 +8,7 @@ toc_sticky: true
 author_profile: false
 sidebar:
   nav: "docs"
-
+typora-root-url: ../../..
 ---
 
 <head>
@@ -160,9 +160,7 @@ print(sklearn.__version__)
 
 여기에서 new data를 모델에 줘서 이것이 뭔지 응답을 받는다.
 
-* [`Linear Regression`]()
-* `Multiple Linear Regression`
-* `Polynomial Regression`
+
 
 
 ### 비지도 학습(Unsupervised Learning)
@@ -174,7 +172,9 @@ print(sklearn.__version__)
 예로 학습한 기계에게 두 그룹으로 나눠 보라고 하면 기계 스스로 판단해서 응답을 받게된다.
 
 
-### 강화 학습(Reinforcement Learning)
+
+
+### 강화 학습(Reinforcement Learning) - 생략
 
 행동에 대한 보상을 통해서 게임처럼 판단한다.
 
@@ -194,8 +194,16 @@ print(sklearn.__version__)
 
   - 예측하는 값에 따라 분류. 각각 연속형, 범주형 변수인 특징
 
-
 ### 회귀(Regression)
+
+* [`Linear Regression(선형 회귀)`](/machine_learning_py/01.-Linear-Regression/)
+  + **경사 하강법 등**
+  + **단순 선형 회귀 : y = mx + b**
+* [`Multiple Linear Regression(다중 선형 회귀)`](/machine_learning_py/02.-Multiple-Linear-Regression/)
+  * **다중 선형 회귀 : y = b + m<sub>1</sub>x<sub>1</sub> + m<sub>2</sub>x<sub>2</sub> + ... + m<sub>n</sub>x<sub>n</sub>**
+* [`Polynomial Regression(다항 회귀)`](/machine_learning_py/03.-Polynomial-Regression/)
+  * **다항 회귀 : y = b + m<sub>1</sub>x + m<sub>1</sub>x<sup>2</sup> + ... + m<sub>n</sub>x<sup>n</sup>**
+  * **적당한 차수를 사용해야 함**
 
 변수들 간의 상관관계를 찾는 것, 연속적인 데이터로부터 결과를 예측.  
 
@@ -212,7 +220,11 @@ print(sklearn.__version__)
 - 예 : 키에 따른 몸무게, 사용 기간에 따른 스마트폰 가격...
 
 
+
 ### 분류(Classification)
+
+* [`Logistic Regression(로지스틱 회귀)`](/machine_learning_py/04.-Logistic-Regression/)
+  * **이름이 회귀지만 분류의 대표적 방식이다.**
 
 주어진 데이터를 정해진 범주(category)에 따라 분류
 
@@ -237,15 +249,36 @@ print(sklearn.__version__)
 ## 비지도 학습(Unsupervised Learning)
 
 - 정답이 없는 데이터를 통해
-
 - 데이터의 유의미한 패턴 / 구조 발견
-
 - 종류 : 군집화(Clustering)
+
 
 
 ### 군집화(Clustering)
 
+* [`K Means(군집화)`](/machine_learning_py/05.-K-Means/)
+  * **유사도**
+
+
+
 유사한 특징을 가지는 데이터들을 그룹화
 
 - 예 : 고객 세분화, 소셜 네트워크 분석, ...
+
+<br>
+
+## 영화 추천 시스템
+
+1. [Demographic Filtering (인구통계학적 필터링)](/machine_learning_py/영화-추천-시스템(협업-필터링)/)
+   * **참고 링크에 제시한 공식 사용**
+2. [Content Based Filtering (컨텐츠 기반 필터링)](/machine_learning_py/영화-추천-시스템(협업-필터링)/)
+   * **줄거리 - `TfidfVectorizer` (TF-IDF 기반의 벡터화) 방식 사용**
+   * **유사도 : 코사인 유사도 - `linear_kernel` 방식 사용**
+   * **장르, 감독, 키워드 등 다양한 요소 - `CountVectorizer` 방식 사용**
+   * **유사도 : 코사인 유사도 - `cosine_similarity` 방식 사용**
+3. [Collaborative Filtering (협업 필터링)](/machine_learning_py/영화-추천-시스템(협업-필터링)/)
+   * **surprise Reader 공식 문서 사용**
+   * **사용자 리뷰 방식**
+
+
 
