--- a/_posts/Git&Github/CLI_명령어/2022-07-31-GIT 기초 명령어.md
+++ b/_posts/Git&Github/CLI_명령어/2022-07-31-GIT 기초 명령어.md
@@ -1,6 +1,6 @@
 ---
 title:  "GIT 기초 명령어 정리(CLI)"
-categories : Knowledge
+categories : [Knowledge, Cli_Git]
 tag : [깃헙, 깃허브, git, github]
 toc: true
 toc_sticky: true
