--- a/_posts/Git&Github/Github_Actions/2022-08-24-자신&다른 레퍼지토리에 push 하는법.md
+++ b/_posts/Git&Github/Github_Actions/2022-08-24-자신&다른 레퍼지토리에 push 하는법.md
@@ -1,5 +1,5 @@
 ---
-title:  "다른 레퍼지토리에 push 하는법"
+title:  "자신&다른 레퍼지토리에 push 하는법"
 categories : Action_Git
 tag : [깃헙, 깃허브, git, github, CI/CD, cron, 깃허브 액션, Github action]
 toc: true
@@ -14,6 +14,37 @@ typora-root-url: ../../..
 
 ## 사용한 문서
 
+
+
+## 자신의 레퍼지토리에 push
+
+**만약 실행중에 새로 파일을 생성한 경우 이 파일을 자신의 레퍼지토리에 저장하는것도 가능하다.**
+
+**이를 자신의 레퍼지토리에 push 하는 방식으로 해결한 것이다.**
+
+
+
+### workflow file
+
+**yml 파일 작성**
+
+```yaml
+    # 생성한 파일들 push로 업데이트
+    - name: push data update
+      run: |
+        git config --global user.name "github-actions[bot]"
+        git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+        git add -A
+        git commit -m "data update"
+        git push
+```
+
+* add, commit, push 명령어는 기본이기 때문에 자세한 설명은 생략하겠음.
+
+<br>
+
+## 다른 레퍼지토리에 push
+
 **사용한 문서 : [push-another-repository](https://github.com/marketplace/actions/push-directory-to-another-repository)**
 
 **정확히 이 문서대로만 진행하면된다. - ssh 키 방식을 사용**
@@ -22,9 +53,9 @@ typora-root-url: ../../..
 - **Set up the deployment key**
 - **문서에서 이 2개만 따라가면 충분**
 
-<br>
 
-## Tip
+
+### Tip
 
 **시간낭비 했던것들이 있어서 정리하겠다.**
 
@@ -42,9 +73,9 @@ typora-root-url: ../../..
    반드시 `private key`를 입력(자신이 만든 key파일)**
    * **`--BEGIN...--` 과` --END...--` 사이의 내용들을 복사해서 붙여넣어야 한다**
 
-<br>
 
-## workflow filie
+
+### workflow filie
 
 **yml 파일 작성**
 
