--- a/_posts/Major/Programming_Language/2022-06-20-PL 서론(1).md
+++ b/_posts/Major/Programming_Language/2022-06-20-PL 서론(1).md
@@ -1,13 +1,15 @@
 ---
-title:  "PL"
+title:  "PL 서론(1)"
 categories : [Programming_Language]
-tag : [ ]
+tag : [프로그래밍언어론, 서론, 어휘구조, 구문법, 의미론, 인터프리터]
 toc: true
 toc_sticky: true
 author_profile: false
 sidebar:
   nav: "docs"
 ---
+
+
 
 ## PL(Programming Language)란?
 
@@ -30,6 +32,8 @@ sidebar:
 
 
 
+
+
 ### 추상화 - 데이터, 제어(명령어), 추상자료형(ADT)
 
 * **컴퓨터의 데이터, 명령어, 연산 등을 추상화**
@@ -45,6 +49,8 @@ sidebar:
 
 **추상 자료형(데이터 + 관련 연산)**  
 => 데이터와 관련된 연산들 캡슐화하여 정의한 자료형(예: Modula-2모듈, Ada패키지, (C++,Java)등의 클래스)
+
+
 
 
 
@@ -72,8 +78,39 @@ int x; 에서 이 자료형의 의미 : 값 + 연산을 의미
 #### 2. Java의 자료형(기본형, 참조형으로 나뉨)
 
 * **유니코드**는 더 커서 한글도 표현. **boolean**형 타입도 존재
-
 * **참조 자료형**을 보면 C에서 포인터와 같은 것 같지만 포인터는 연산이 가능해서 메모리에서 직접 값을 변경할 수 있지만 참조 자료형은 불가. 그래서 메모리 해제도 GC가 동작하는 것(가비지 컬렉션)
+
+
+
+
+
+### 자동 형변환
+
+**자동으로 형 변환하는 묵시적 형 변환**
+
+* **확장 변환(상향 변환)** : Java에서 자동 형변환은 대부분 확장 변환(예: double y=99; // 99.0)
+  * 그러나 반대의 경우는 정보 손실이 일어날일이 없음. 확장 변환(y=x)
+* **축소 변환** : 확장 변환의 반대
+  * 큰타입이 작은타입으로 바뀌려는건 정보 손실. 축소 변환(x=y)
+
+* **대입 변환** : `대입문`도 확장 변환인 경우에만 자동 수행(축소 변환은 X)
+  * 그런데 예외적으로 int 상수에 대해서만 **자동 축소 변환가능**
+
+* 예시
+  * byte b = 123; // 축소 변환
+  * short s = 456; // 축소 변환
+  * int i = s; // 확장 변환 (값을 몰라도 타입은 아니까 바로 확장 변환)
+  * byte b2 = 456; // 오류 (byte 범위 밖)
+  * short s2 = i; // 오류 (타입은 알아도 현재 값은 모름)
+  * 컴파일할 때 변수의 TypeO, 값X(모름)
+* **C는 확장, 축소 둘다 허용**
+* **자바는 확장, 손실없는 축소 까지 허용**
+
+
+
+**참고로 캐스팅의 경우?**
+
+* C, 자바 둘다 문제없음. 즉, 명시적이지 자동 묵시적 형변환이 아님
 
 <br>
 
@@ -94,6 +131,8 @@ int x; 에서 이 자료형의 의미 : 값 + 연산을 의미
 
 
 
+
+
 ### 함수형 프로그래밍(Lisp,Scheme,ML,Haskell)
 
 **수학 함수** 형태   
@@ -102,6 +141,8 @@ int x; 에서 이 자료형의 의미 : 값 + 연산을 의미
 
 **반복문 없음**   
 => **대안 : 리커전 반복**
+
+
 
 
 
@@ -115,6 +156,8 @@ int x; 에서 이 자료형의 의미 : 값 + 연산을 의미
 
 
 
+
+
 ### 객체지향 프로그래밍(종류 매우 많음) - 객체 개념
 
 * **(C)프로그램**은 **데이터**(변수, 구조체/배열 등) + **명령어**(배정문, 조건문/반복문, 함수)로 구성
@@ -125,6 +168,8 @@ int x; 에서 이 자료형의 의미 : 값 + 연산을 의미
 **객체(instance=인스턴스)** 는 속성(데이터)+행동(연산)이며, 클래스로 생성   
 **프로그램**은 클래스들의 집합  
 **프로그램 실행**은 서로 상호작용하는 객체들의 집합
+
+<br>
 
 
 
