--- a/_posts/Major/Programming_Language/2022-06-20-PL 서론(1).md
+++ b/_posts/Major/Programming_Language/2022-06-20-PL 서론(1).md
@@ -13,6 +13,8 @@ sidebar:
 
 ## PL(Programming Language)란?
 
+> 정리 하고 싶은 부분만 정리한 것이기 때문에 내용이 탄탄하지는 않다는점 참고
+
 ### PL?
 
 * **계산 과정을 기계, 사람이 읽을 수 있게 기술한 표기법**
@@ -62,7 +64,7 @@ sidebar:
   포인터 타입(예: C의 포인터. 위치(주소)를 값으로 사용하는 특징), 사용자-정의 타입(예: 사용자가 만든 class
 
 int x; 에서 이 자료형의 의미 : 값 + 연산을 의미  
-=> 값 : 그 타입의 변수가 가질 수 있는 값들의 집합. x ![subset](../../../images/2022-06-21-PL/subset.png) Integer  
+=> 값 : 그 타입의 변수가 가질 수 있는 값들의 집합. x ∈ Integer  
 => 연산 : 추가로 그 값에 적용 가능한 연산들의 모음(데이터 타입에 맞게 연산하는지 체크)
 
 #### 1. C의 자료형(기본형, 파생형으로 나뉨)
