--- a/_posts/etc/2022-09-06-blog 디자인 커스텀.....md
+++ b/_posts/etc/2022-09-06-blog 디자인 커스텀.....md
@@ -1005,15 +1005,107 @@ $navicon-link-color-hover: mix(#000, $background-color, 30%) !default;
 
 ## 카테고리, 태그 모양 수정
 
+* `_includes/archive-single.html` 에서 수정
+* `h2`로 감싸주며, 각각 margin을 적절히 주고, 날짜가 먼저 나오게 순서도 변경해준다
+* 그리고 카테고리는 진하게를 없애주고, 사이즈도 적절히 수정해준다
+
+```
+<h2 class="{{ include.type | default: 'list' }}__item" style="margin-top: 10px;">
+  <article class="archive__item" itemscope itemtype="https://schema.org/CreativeWork" style="margin-bottom: 40px;">
+    {% if include.type == "grid" and teaser %}
+      <div class="archive__item-teaser">
+        <img src="{{ teaser | relative_url }}" alt="">
+      </div>
+    {% endif %}
+      {% if post.date %}
+      {% include page__meta.html type=include.type %}
+      {% endif %}
+      {% if post.link %}
+        <a href="{{ post.link }}">{{ title }}</a> <a href="{{ post.url | relative_url }}" rel="permalink"><i class="fas fa-link" aria-hidden="true" title="permalink"></i><span class="sr-only">Permalink</span></a>
+      {% else %}
+      <div style="margin-bottom: 20px;">
+        <a href="{{ post.url | relative_url }}" rel="permalink">{{ title }}</a>
+      </div>
+      {% endif %}
+    <div style="font-size: 0.8em; font-style: normal; font-weight: 1;">
+    {% if site.category_archive.type and post.categories[0] and site.tag_archive.type and post.tags[0] %}
+    {%- include post__taxonomy.html -%}
+    {% endif %}
+    </div>
+  </article>
+</h2>
+```
 
 
 
+* `_base.scss` 에서 방문한 후 색변환을 없애고 싶어서 없애준다.
+
+```scss
+/* links */
+
+a {
+  // &:visited {
+  //   color: $link-color-visited;
+  // }
+}
+```
+
+
+
+* `_page.scss` 에서 카테고리 모양을 마저 스타일링 한다.
+
+```scss
+.page__taxonomy-item-category {
+  display: inside;
+  margin-top: 5px;
+  margin-right: 5px;
+  margin-bottom: 8px;
+  padding: 2px 6px;
+  text-decoration: none;
+  border: 1px solid $background-color;
+  border-radius: $border-radius;
+  background-color: #d1d2d3;
+  font-family: $serif;
+  color: $primary-color;
+
+  &:hover {
+    text-decoration: none;
+    color: mix(#0091b5, $text-color, 40%); /* 커서 댈 때 색깔 */
+  }
+}
+```
 
 <br>
 
 ## 본문의 `h1, h2, ... 강조` 스타일링
 
+* `_page.scss` 에서 `page__content` 를 수정 해 볼것
+  * **아래 코드 나타냈고, h2와 h3을 자주 사용해서 이것만 스타일링 하였다.**
+* `_base.scss` 에서 h1~h6는 거희 사이즈정도 정의해서 여긴 안봐도 될듯
 
+```scss
+// _page.scss
+.page__content {
+  margin-top: 20px; // 게시글 제목과 본문 거리를 벌리기 위함
+
+  h2 {
+    margin: 29px 0 22px;
+    color : #000;
+    border-bottom:2px solid #333333;
+	  border-left:10px solid #333333;
+	  padding: 5px 15px;
+    line-height: 1.5;
+  }
+  h3 {
+    margin: 29px 0 22px;
+    color : #000;
+    border-bottom:2px solid #333333;
+	  border-left:5px solid #333333;
+	  padding: 5px 15px;
+    line-height: 1.5;
+  }
+}
+```
 
 <br>
 
