fix : 파일이름 변경, 탭 추가

--- a/_posts/Style_Sheet/CSS/2022-08-01-다양한 UI 스타일링.md
+++ b/_posts/Style_Sheet/CSS/2022-08-01-다양한 UI 스타일링.md
@@ -57,13 +57,18 @@ typora-root-url: ../../..
     **왼쪽 화살표의 위치배치** 예시로 `direction`은 왼쪽 화살표의 이름으로 `left`를 의미하며 삼항 연산을 통해 배치시켰다. 왜냐하면 그냥은 왼쪽, 오른쪽 화살표 위치로 이동이 힘들기 때문이다.
 * **Wrapper**(그림들 담은 큰틀)은 **Container**의 바로 자식이다.  
   `display: flex`를 통해 가로로 많은 그림들을 볼 수 있다.(이것을 안하면 세로로 나타난다)
-  * `transition: all 1.5s ease`를 통해 1.5초 동안 그림넘기는 애니메이션 기능이다.
+  * `transition: all 1.5s ease`를 통해 1.5초 동안 그림넘기는 애니메이션 기능이다.  
+    `ease`가 기본 속성이며, 다른 속성들 사용시 넘어가는 효과들이 달라진다.
   * `transform: translateX(${props=> props.slideIndex * -100}vw)`를 통해 그림 한개씩을 넘긴다.  
     이게 가능한 이유는 -100px, -200px... 를 해보면 점점 오른쪽 그림들로 넘어간다는 것을 알 수 있다.  
     여기서 100vw는 100% 화면너비를 의미하므로, -100vw를 통해서 그림 한개 단위로 넘길 수 있다.  
     => 물론 그림 한개가 웹 화면너비 100%로 가득 채워서 만들었을때의 가정이다.  
 * **Slide**(그림 한개 담아지는 틀)은 Wrapper의 바로 자식이다.  
   여기서는 100% 너비보단 `width: 100vw` 로 너비 지정하는 것이 더욱 오차가 없다.
+  * `width:100%` 를 사용하다보니, 원치 않게 자꾸 화면에 맞춰서 작아진 경우가 있다. 그러나 px로 다루면 크기가 정해진거라서 변하지 않는다.
+  * 크기를 정하고 싶었기 때문에 px역할을 해줄 `width:100vw` 로 px로 100% 너비 지정해준 효과로 된다.
+  * 즉, 이방법을 사용해야 그림들을 가로로 화면 크기 이상 나타낼 수 있다.
+  * 그러므로 이것을 감싸는 부모는? 화면에 딱 맞춰 나타내야 할테니 높이는 `height:100%` 로 작성해줘야 좋다
 * **Button**(SHOW NOW 의미)처럼 배경색과 어우러지는 방법은 `background-color: transparent` 이다.  
   이것은 색이 아예 없다는것을 의미한다.
 
